<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShinyExpenseTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_expense_claim">View Expense Claims</string>
    <string name="title_activity_add_expense_claim">Add an Expense Claim</string>
    <string name="title_activity_manage_tag">Manage Tags</string>
    <string name="add_tag">Add Tag</string>
    <string name="action_new_claim">New Claim</string>
    <string name="action_sort">Sort By&#8230;</string>
    <string name="action_filter">Filter&#8230;</string>
    <string name="action_manage_tags">Manage Tags</string>
    <string name="title_activity_expense_claims_view">Expense Claims</string>
    <string name="title_activity_add_tag">AddTagActivity</string>

    <string-array name="expenseItemCategories">
        <item>air fare</item>
        <item>ground transport</item>
        <item>vehicle rental</item>
        <item>private automobile</item>
        <item>fuel</item>
        <item>parking</item>
        <item>registration</item>
        <item>accomodation</item>
        <item>meal</item>
        <item>supplies</item>
    </string-array>

    <string name="title_activity_expense_item">Add an Expense Item</string>

    <string-array name="expenseItemCurrencies">
        <item>CAD</item>
        <item>USD</item>
        <item>GBP</item>
        <item>EUR</item>
        <item>CHF</item>
        <item>JPY</item>
        <item>CNY</item>
    </string-array>

    <string name="title_activity_add_destination">Add a Destination</string>
    <string name="title_activity_tabbed_summary">Claim Summary</string>
    <string name="title_section1">Summary</string>
    <string name="title_section2">Expenses</string>
    <string name="title_section3">Destinations</string>
    <string name="label_end_date">End Date:</string>
    <string name="label_tags">Tags:</string>
    <string name="label_expense_totals">Expense Totals:</string>
    <string name="label_start_date">Start Date:</string>
    <string name="label_status">Status:</string>
    <string name="title_activity_claim_summary">ClaimSummaryActivity</string>
    <string name="deleteExpenseItemPromptTitle">Delete?</string>
    <string name="deleteExpenseItemPromptMessage">Delete this expense item?</string>
    <string name="deleteDestinationItemPromptTitle">Delete?</string>
    <string name="deleteDestinationItemPromptMessage">Delete this destination?</string>
    <string name="editOrViewExpenseItemPromptTitle">Choose Action</string>
    <string name="editOrViewExpenseItemPromptMessage">Edit or View Details of this Expense?</string>
    <string name="no_expenses">No Expenses</string>
    <string name="claim_name">claim name</string>
    <string name="add_expense_item">Add Expense Item</string>
    <string name="add_destination">Add Destination</string>
    <string name="edit_claim">Edit Claim</string>
    <string name="no_destinations">No Destinations</string>
    <string name="delete_selected_tag">Delete selected tag?</string>
    <string name="title_activity_expense_item_detail_view">Expense Item Details</string>
    <string name="destination_Done_Button">Done</string>
    <string name="reason_For_Travel">Reason For Travel</string>
    <string name="destination_name">Destination</string>
    <string name="tap_to_enter">Touch to enter&#8230;</string>
    <string name="name_value">Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="expense_item_category">Category</string>
    <string name="expense_item_description">Description</string>
    <string name="expense_item_amount">Amount</string>
    <string name="expense_item_completeness">Complete</string>
    <string name="expense_item_date">Date</string>
    <string name="expense_item_receipt">Receipt</string>
    <string name="title_activity_receipt_view">View your Receipt</string>
    <string name="expense_item_thumbnail_desc">Receipt Thumbnail</string>
    <string name="expense_item_completeness_flag">Completeness Flag Picture</string>
    <string name="edit_expense_item">Edit Expense Item</string>
    <string name="submit_claim">Submit Claim</string>
    <string name="remove_receipt">Remove Receipt</string>
    <string name="set_home_geolocation">Set Home Geolocation</string>
    <string name="title_activity_geolocation_view">Geolocation View</string>
    <string name="geolocationTitle">Selected Coordinates</string>
    <string name="geolocationValueDefault">None Selected (tap here to select)</string>
    <string name="automaticGeolocationSetupButtonText">Set Automatically Using GPS</string>
    <string name="mapAssistedGeolocationSetupButtonText">Set Location Using Map</string>
    <string name="title_activity_map_view">Map View</string>
    <string name="saveGeolocationButtonText">Save Geolocation</string>
    <string name="title_activity_add_tag_to_claim">Add Tags to a Claim</string>
    <string name="title_activity_sign_in_as_approver_or_claimant">Log in</string>
    <string name="claimant">Claimant</string>
    <string name="approver">Approver</string>
    <string name="login_as">Login as:</string>
    <string name="continue_button">Continue</string>
    <string name="title_activity_remove_tag_from_claim">Remove Tags from a Claim</string>
    <string name="remove_tags">Remove Tags</string>
    <string name="no_tags_to_add">No Tags to add. Please go to the main menu to add Tags</string>
    <string name="add_tags">Add Tags</string>
    <string name="expenseItemDetailGeolocationTitle">Geolocation</string>
    <string name="homeGeolocationTitle">Home Geolocation</string>
    <string name="homeGeolocationDefaultValue">No Home Geolocation Selected</string>
    <string name="approve_claim">Approve Claim</string>
    <string name="comment">Comment</string>
    <string name="return_claim">Return Claim</string>
    <string name="displayAllGeolocationsStored">Display All Geolocations</string>
    <string name="add_comment">Add Comment</string>
    <string name="view_comments">View Comments</string>
    <string name="title_activity_view_comments">View Comments</string>
    <string name="no_comments">No Comments</string>
    
    <string name="action_help">Help</string>
    <string name="default_help">No help found.</string>
    
    <!-- Data for help dialogs -->
    <string name="help_destination">Indicate a location of travel to attach to this claim</string>
    
    <string name="help_add_tags">Select tags that you want to attach to this claim. You can manage your tags from the tag manager in the claim list view.</string>
    <string name="help_remove_tag">Select tags that you want to remove from this claim</string>
    <string name="help_manage_tags">Add, remove, or modify tags. Changes here will be reflected in all claims.</string>
    
    <string name="help_new_claim">Give the claim a useful name and indicate when the travel claim begins and ends.
        Your claims will be sorted in reverse chronological order by the start date.</string>
    <string name="help_claim_list">Add new claims from the context menu. Single press an item to view more info, hold press to delete.</string>
    
    <string name="help_new_item">Give some info about an individual expense for this claim. The totals will be reflected in the summary page.</string>
    <string name="help_item_details">Press the receipt thumbnail to view the receipt.</string>
    <string name="help_receipt_view">Press back to return to the expense\'s details.</string>
    
    <string name="help_geolocation">Set your home location.</string>
    <string name="help_login">Claimants can create, modify, and submit claims, Approvers can approve or return submitted claims</string>
    <string name="help_map_view">Tap the new location. Press back to save.</string>

    <string name="help_tabbed_summary">Tap an item in a list to view more details or to edit. You can use the context menu for more actions.</string>
    <string name="help_view_comments">An approver can add comments to a claim from the summary page using the context menu.</string>

</resources>
