<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ca.ualberta.cs.shinyexpensetracker.ExpenseClaimsView" >

    <item
        android:id="@+id/action_new_claim"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_new_claim"/>
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_sort"/>
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_filter"/>
    <item
        android:id="@+id/action_manage_tags"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/action_manage_tags"/>

</menu>
