<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.cs.shinyexpensetracker.activities.GeolocationViewActivity" >

    <TextView
        android:id="@+id/geolocationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/geolocationTitle" />

    <TextView
        android:id="@+id/geolocationValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/geolocationTitle"
        android:layout_below="@+id/geolocationTitle"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/geolocationValueDefault" />

    <Button
        android:id="@+id/automaticGeolocationSetupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:onClick="clickSetGeolocationAutomatically"
        android:text="@string/automaticGeolocationSetupButtonText" />

    <Button
        android:id="@+id/mapAssistedGeolocationSetupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/automaticGeolocationSetupButton"
        android:onClick="clickSetGeolocationUsingMap"
        android:text="@string/mapAssistedGeolocationSetupButtonText" />

</RelativeLayout>
