<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.cs.shinyexpensetracker.activities.AddExpenseClaimActivity" >

    <EditText
        android:id="@+id/editTextExpenseClaimName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textViewName"
        android:ems="10"
        android:hint="@string/tap_to_enter" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextExpenseClaimName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/name_value"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextExpenseClaimName"
        android:layout_below="@+id/editTextExpenseClaimName"
        android:layout_marginTop="25dp"
        android:text="@string/start_date"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewStartDate"
        android:layout_alignEnd="@+id/editTextExpenseClaimName"
        android:layout_below="@+id/textViewStartDate"
        android:focusable="false"
        android:ems="10"
        android:hint="@string/tap_to_enter"
        android:inputType="date" />

    <EditText
        android:id="@+id/editTextEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewEndDate"
        android:layout_alignEnd="@+id/editTextStartDate"
        android:layout_below="@+id/textViewEndDate"
        android:focusable="false"
        android:ems="10"
        android:hint="@string/tap_to_enter"
        android:inputType="date" />

    <TextView
        android:id="@+id/textViewEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextStartDate"
        android:layout_below="@+id/editTextStartDate"
        android:layout_marginTop="20dp"
        android:text="@string/end_date"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/addExpenseClaimDoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="53dp"
        android:layout_toEndOf="@+id/textViewStartDate"
        android:onClick="doneExpenseItem"
        android:text="@string/destination_Done_Button" />

</RelativeLayout>
