<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <!-- This activity is scrollable -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="ca.ualberta.cs.shinyexpensetracker.activities.ExpenseItemDetailActivity" >

        <LinearLayout
            android:id="@+id/expenseItemNameLayout"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:id="@+id/expenseItemNameValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <!-- Completeness Indicator -->

            <CheckBox
                android:id="@+id/expenseItemCompletenessFlag"
                style="?android:attr/starStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:onClick="onToggleCompletenessFlag" />
        </LinearLayout>

        <!-- 2 row table layout -->

        <TableLayout
            android:id="@+id/expenseItemTableLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/expenseItemNameLayout"
            android:gravity="fill_horizontal" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp" >

                <TextView
                    android:id="@+id/expenseItemDateTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/expense_item_date" />

                <TextView
                    android:id="@+id/expenseItemDateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp" >

                <TextView
                    android:id="@+id/expenseItemCategoryTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/expense_item_category" />

                <TextView
                    android:id="@+id/expenseItemCategoryValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp" >

                <TextView
                    android:id="@+id/expenseItemAmountTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/expense_item_amount" />

                <TextView
                    android:id="@+id/expenseItemAmountValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp" >

                <TextView
                    android:id="@+id/expenseItemDescriptionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/expense_item_description" />

                <TextView
                    android:id="@+id/expenseItemDescriptionValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp" >

                <TextView
                    android:id="@+id/expenseItemGeolocationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/expenseItemDetailGeolocationTitle" />

                <TextView
                    android:id="@+id/expenseItemGeolocationValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </TableRow>
        </TableLayout>

        
        <ImageButton
            android:id="@+id/expenseItemDetailImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/expenseItemTableLayout"
            android:contentDescription="@string/expense_item_receipt"
            android:onClick="onReceiptThumbnailClick"
            android:background="@null" />

        <!-- Remove this (change delete to hold press button) See #153 -->

        <Button
            android:id="@+id/removeReceiptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/expenseItemDetailImageButton"
            android:onClick="onClickRemoveReceipt"
            android:text="@string/remove_receipt" />
    </RelativeLayout>

</ScrollView>